# cisc187-lab02-c-review

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  change.cpp  change.h
test/: CMakeLists.txt  test_change.cpp
